forge/tests/errors/because_chain.fg
fn get_name() -> string {
    "Alice"
}

fn main() {
    let x: int = get_name()
    println(string(x))
}
